# VLM-Hackathon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: rag-system.ipynb  team2_playground.ipynb  team2_solution.ipynb  v&or_maintenance_data.ipynb  vlm_test.ipynb  vlm_usage.ipynb
